# python-uanti

./: README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
uanti/: __init__.py  const.py  gerrit.py  gerrit.wadl
uanti/gerrit/: __init__.py  cli.py  client.py  mixins.py
uanti/gerrit/objects/: __init__.py  access.py  accounts.py  changes.py  documentation.py  groups.py  plugins.py  projects.py
uanti/restful/: __init__.py  auth.py  base.py  cli.py  client.py  exceptions.py  mixins.py  types.py  utils.py
uanti/tastypie/: __init__.py  base.py  client.py
